# styplayer

./: README.md  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fluidsynth_bridge.cpp
app/src/main/java/com/yamaha/sxstyleplayer/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/yamaha/sxstyleplayer/engine/: MidiEngine.kt
app/src/main/java/com/yamaha/sxstyleplayer/parser/: StyleParser.kt
app/src/main/java/com/yamaha/sxstyleplayer/sequencer/: Sequencer.kt
app/src/main/java/com/yamaha/sxstyleplayer/ui/: MainScreen.kt
app/src/main/java/com/yamaha/sxstyleplayer/ui/theme/: Theme.kt
app/src/main/res/values/: themes.xml
